--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/create.js": "/js/create.js",
+    "/js/edit.js": "/js/edit.js",
     "/css/app.css": "/css/app.css"
 }
